Changelog
=========

7.0-dev - (unreleased)
----------------------
* Feature: Upgraded to Simile Exhibit 3.0
  [voineali refs #13807]


6.2 - (2013-01-10)
------------------
* Upgrade step: Within "Plone > Site setup > Add-ons" click on
  upgrade button available for eea.exhibit
* Change: Fix tabular view to get column labels from FacetsVocabulary and not
  directly from annotations
  [voineali refs #9558]
* Feature: Possibility to customize Exhibit visualizations title
  [avoinea]
* Feature: On saving a chart, copy the generic chart image in the visualization
  [szabozo0 refs #10019]
* Bug fix: add namespace declaration for exhibit (makes Chameleon happy)
  [simahawk]

6.1 - (2012-11-09)
------------------
* Feature: Display image when javascript is disabled
  [szabozo0 refs #9562]
* Bug fix: Fixed tabular view columns format
  [voineali refs #9583]
* Feature: Allow distict columns for latitude and longitude
  [voineali refs #9593]
* Feature: Allow editing of extra configuration for exhibit views
  [voineali refs #5521]

6.0 - (2012-10-08)
------------------
* Upgrade step: Within "Plone > Site setup > Add-ons" click on
  upgrade button available for eea.exhibit
* Feature: Made this package Plone independent (Zope2 minimal requirements)
  [voineali refs #5421]

4.5-dev - (unreleased)
----------------------

4.4 - (2012-07-13)
------------------
* Bug Fix: Fixed i18n missing tags and duplicate keys in .pt files
  [prospchr refs #5162]

4.3 - (2012-06-12)
------------------
* Bug fix: fixed markup of HISTORY.txt file
  [ciobabog refs #5231]
* Feature: Added preview images for Exhibit Views
  [voineali refs #5024]
* Feature: Added possibility to customize lenses for all exhibit views not only
  for Tile View
  [voineali fixes #5112]
* Feature: Added unique URLs for exhibit tabs in order to easily bookmark and
  share them. Also support browser history (back and forward buttons)
  [voineali refs #4851]

4.2 - (2012-03-30)
------------------