@@ -3,9 +3,10 @@ Changelog
 
 7.0-dev - (unreleased)
 ----------------------
+* Bug fix: Center timeline to current date
+  [voineali refs #10176]
 * Feature: Upgraded to Simile Exhibit 3.0
   [voineali refs #13807]
-
 
 6.2 - (2013-01-10)
 ------------------
